@@ -2,18 +2,16 @@ package com.example.springapp.controller;
 
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
+// import java.nio.file.Files;
+// import java.nio.file.Path;
+// import java.nio.file.StandardCopyOption;
 import java.util.List;
 import java.util.Random;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.io.Resource;
-import org.springframework.core.io.UrlResource;
+//import org.springframework.core.io.Resource;
+//import org.springframework.core.io.UrlResource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -34,6 +32,8 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
+import com.amazonaws.services.s3.AmazonS3;
+import com.amazonaws.services.s3.model.ObjectMetadata;
 import com.example.springapp.entity.ChangePasswordRequest;
 import com.example.springapp.entity.Contact;
 import com.example.springapp.entity.Loan;
@@ -46,6 +46,13 @@ import com.example.springapp.repository.UserFunctionRepository;
 import com.example.springapp.service.LoanService;
 import com.example.springapp.service.ReviewService;
 import com.example.springapp.service.UserFunctionService;
+import org.springframework.beans.factory.annotation.Value;
+import jakarta.annotation.PostConstruct;
+
+import com.amazonaws.services.s3.model.GetObjectRequest;
+import com.amazonaws.services.s3.model.S3Object;
+import com.amazonaws.util.IOUtils;
+
 
 @CrossOrigin
 @RestController
@@ -55,6 +62,9 @@ public class UserFunctionController {
     @Autowired
     @Qualifier("userFunctionServiceImpl")
     private UserFunctionService userFunctionService;
+
+    @Autowired
+    private UserFunctionRepository userFunctionRepository;
 
     @GetMapping("/adminGetDetails")
     public List<Users> getAllUsers() {
@@ -76,14 +86,97 @@ public class UserFunctionController {
         }
     }
 
+    @Autowired
+    private AmazonS3 amazonS3;
+    
+    @Value("${aws.s3.bucket}")
+    private String bucketName;
 
+    @Value("${aws.s3.folder}")
+    private String folderName;
 
     
+    @PostConstruct
+    public void validateConfig() {
+        if (!StringUtils.hasText(bucketName)) {
+            throw new IllegalStateException("AWS S3 bucket name is not configured");
+        }
+        if (!StringUtils.hasText(folderName)) {
+            throw new IllegalStateException("AWS S3 folder name is not configured");
+        }
+    }
+
+    @GetMapping("/getImage/{imageName}")
+    public ResponseEntity<byte[]> getImage(@PathVariable String imageName) {
+        try {
+            // Include folder prefix in the S3 object key
+            String objectKey = folderName + "/" + imageName;
+            S3Object s3Object = amazonS3.getObject(new GetObjectRequest(bucketName, objectKey));
+            byte[] imageBytes = IOUtils.toByteArray(s3Object.getObjectContent());
+
+            HttpHeaders headers = new HttpHeaders();
+            //headers.setContentType(MediaType.IMAGE_JPEG); // Adjust based on file extension if needed
+            String extension = imageName.substring(imageName.lastIndexOf(".") + 1).toLowerCase();
+            MediaType mediaType = switch (extension) {
+                case "png" -> MediaType.IMAGE_PNG;
+                case "gif" -> MediaType.IMAGE_GIF;
+                default -> MediaType.IMAGE_JPEG;
+            };
+            headers.setContentType(mediaType);
+            headers.setContentLength(imageBytes.length);
+
+            return new ResponseEntity<>(imageBytes, headers, HttpStatus.OK);
+        } catch (Exception e) {
+            e.printStackTrace();
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+    }
+
+    @PostMapping("/{userId}/uploadImage")
+    public ResponseEntity<String> uploadImage(@PathVariable Integer userId, @RequestParam MultipartFile file) {
+        try {
+            Users userFunction = userFunctionRepository.findById(userId).orElse(null);
+
+            if (userFunction == null) {
+                return ResponseEntity.status(HttpStatus.NOT_FOUND).body("User not found.");
+            }
+
+            String fileName = StringUtils.cleanPath(file.getOriginalFilename());
+            String uniqueFileName = userId + "_" + System.currentTimeMillis() + "_" + fileName;
+
+            // Include folder prefix in the S3 object key
+            String objectKey = folderName + "/" + uniqueFileName;
+
+            // Upload file to S3
+            ObjectMetadata metadata = new ObjectMetadata();
+            metadata.setContentLength(file.getSize());
+            metadata.setContentType(file.getContentType());
+            
+            amazonS3.putObject(bucketName, objectKey, file.getInputStream(), metadata);
+
+            // Update the user's profileImagePath with the file name (without folder prefix)
+            userFunction.setProfileImagePath(uniqueFileName);
+            userFunctionRepository.save(userFunction);
+
+            return ResponseEntity.ok("Image uploaded successfully!");
+        } catch (IOException e) {
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to upload image.");
+        } catch (Exception e) {
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Internal server error.");
+        }
+    }
+
+
+    /*
+
+    // This is For Local Image Retrieval
     @GetMapping("/getImage/{imageName}")
     public ResponseEntity<Resource> getImage(@PathVariable String imageName) {
         try {
             // Resolve the file path for the requested image
-            Path imagePath = Paths.get(uploadPath).resolve(imageName);
+            Path imagePath = Path.of(uploadPath).resolve(imageName);
             Resource resource = new UrlResource(imagePath.toUri());
 
             if (resource.exists() && resource.isReadable()) {
@@ -104,8 +197,7 @@ public class UserFunctionController {
    
 
     
-    @Autowired
-    private UserFunctionRepository userFunctionRepository;
+    
 
     @Value("${upload.path}")
     private String uploadPath;
@@ -126,7 +218,7 @@ public class UserFunctionController {
             String uniqueFileName = userId + "_" + System.currentTimeMillis() + "_" + fileName;
 
             // Save the file to the server
-            Path directoryPath = Paths.get(uploadPath);
+            Path directoryPath = Path.of(uploadPath);
             if (!Files.exists(directoryPath)) {
                 Files.createDirectories(directoryPath);
             }
@@ -147,6 +239,8 @@ public class UserFunctionController {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Internal server error.");
         }
     }
+
+    */
 
  
 
@@ -208,31 +302,6 @@ public class UserFunctionController {
     }
 
 
-    /* 
-
-
-    @PostMapping("/verifyOtpAndUpdatePassword")
-    public ResponseEntity<String> verifyOtpAndUpdatePassword(
-            @RequestParam String emailId,
-            @RequestParam String otp,
-            @RequestParam String newPassword) {
-
-        Users user = userFunctionService.findByEmailId(emailId);
-
-        if (user != null && user.getOtp() != null && user.getOtp().equals(otp)) {
-            // OTP is valid, update the password
-            user.setPassword(newPassword);
-            user.setOtp(null); // Clear the OTP after successful verification
-            userFunctionService.userFunction(user);
-
-            return new ResponseEntity<>("Password updated successfully", HttpStatus.OK);
-        } else {
-            return new ResponseEntity<>("Invalid OTP or user not found", HttpStatus.BAD_REQUEST);
-        }
-    }
-    
-    */
-
     
     @Autowired
     private PasswordEncoder passwordEncoder; // Inject PasswordEncoder
@@ -242,17 +311,23 @@ public class UserFunctionController {
             @RequestParam String emailId,
             @RequestParam String otp,
             @RequestParam String newPassword) {
+        // Validate password strength
+        if (newPassword.length() < 8) {
+            return new ResponseEntity<>("Password must be at least 8 characters long", HttpStatus.BAD_REQUEST);
+        }
+        if (!newPassword.matches(".*[!@#$%^&*(),.?\":{}|<>].*")) {
+            return new ResponseEntity<>("Password must include at least one special character", HttpStatus.BAD_REQUEST);
+        }
 
         Users user = userFunctionService.findByEmailId(emailId);
-
         if (user != null && user.getOtp() != null && user.getOtp().equals(otp)) {
-            // OTP is valid, update the password
-            user.setPassword(passwordEncoder.encode(newPassword)); // Encode the new password
-            user.setOtp(null); // Clear the OTP after successful verification
+            user.setPassword(passwordEncoder.encode(newPassword));
+            user.setOtp(null);
             userFunctionService.userFunction(user);
-
+            System.out.println("Password updated for user: " + emailId);
             return new ResponseEntity<>("Password updated successfully", HttpStatus.OK);
         } else {
+            System.out.println("OTP verification failed for email: " + emailId);
             return new ResponseEntity<>("Invalid OTP or user not found", HttpStatus.BAD_REQUEST);
         }
     }
